<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AlarmSetup">

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hapticFeedbackEnabled="true"
        android:longClickable="false"
        android:numbersBackgroundColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/alarmNameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/alarm_name_input_hint"
        android:inputType="textCapWords"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="#ff444444"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePicker"
        tools:text="Alarm Name" />

    <TextView
        android:id="@+id/widthHeaderAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/board_width_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alarmNameInput" />

    <SeekBar
        android:id="@+id/widthSliderAlarm"
        style="@style/Theme.MinesweeperAlarm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:max="2"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progressDrawable="@drawable/tintable_seek_bar"
        android:progressTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/widthHeaderAlarm"
        app:layout_constraintStart_toStartOf="@+id/widthHeaderAlarm"
        app:layout_constraintTop_toBottomOf="@+id/widthHeaderAlarm" />

    <TextView
        android:id="@+id/widthTextAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/widthSliderAlarm"
        app:layout_constraintEnd_toEndOf="@+id/widthHeaderAlarm"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/widthSliderAlarm"
        app:layout_constraintTop_toTopOf="@+id/widthSliderAlarm"
        tools:text="10" />

    <TextView
        android:id="@+id/heightHeaderAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/board_height_text"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/widthHeaderAlarm"
        app:layout_constraintStart_toStartOf="@+id/widthHeaderAlarm"
        app:layout_constraintTop_toBottomOf="@+id/widthSliderAlarm" />

    <SeekBar
        android:id="@+id/heightSliderAlarm"
        style="@style/Theme.MinesweeperAlarm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="50dp"
        android:max="7"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progressDrawable="@drawable/tintable_seek_bar"
        android:progressTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/heightHeaderAlarm"
        app:layout_constraintStart_toStartOf="@+id/heightHeaderAlarm"
        app:layout_constraintTop_toBottomOf="@+id/heightHeaderAlarm" />

    <TextView
        android:id="@+id/heightTextAlarm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/heightSliderAlarm"
        app:layout_constraintEnd_toEndOf="@+id/heightHeaderAlarm"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/heightSliderAlarm"
        app:layout_constraintTop_toTopOf="@+id/heightSliderAlarm"
        tools:text="10" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:divider="@drawable/empty_tall_divider"
        android:gravity="bottom"
        android:longClickable="false"
        android:orientation="horizontal"
        android:showDividers="middle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancelButton"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.AppCompat.ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/save_button_text"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>