<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MinesweeperSetup">

    <TextView
        android:id="@+id/activityTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/setup_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/widthHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/board_width_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityTitle" />

    <SeekBar
        android:id="@+id/widthSlider"
        style="@style/Theme.MinesweeperAlarm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:max="2"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progressDrawable="@drawable/tintable_seek_bar"
        android:progressTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/widthHeader"
        app:layout_constraintStart_toStartOf="@+id/widthHeader"
        app:layout_constraintTop_toBottomOf="@+id/widthHeader" />

    <TextView
        android:id="@+id/widthText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/widthSlider"
        app:layout_constraintEnd_toEndOf="@+id/widthHeader"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/widthSlider"
        app:layout_constraintTop_toTopOf="@+id/widthSlider"
        tools:text="10" />

    <TextView
        android:id="@+id/heightHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/board_height_text"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/widthSlider"
        app:layout_constraintTop_toBottomOf="@+id/widthSlider" />

    <SeekBar
        android:id="@+id/heightSlider"
        style="@style/Theme.MinesweeperAlarm"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:max="7"
        android:maxHeight="3dp"
        android:minHeight="3dp"
        android:progressDrawable="@drawable/tintable_seek_bar"
        android:progressTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/widthHeader"
        app:layout_constraintStart_toStartOf="@+id/widthHeader"
        app:layout_constraintTop_toBottomOf="@+id/heightHeader" />

    <TextView
        android:id="@+id/heightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/heightSlider"
        app:layout_constraintEnd_toEndOf="@+id/widthHeader"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/widthSlider"
        app:layout_constraintTop_toTopOf="@+id/heightSlider"
        tools:text="10" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/play_text"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>