<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <TextView
        android:id="@+id/nextAlarmRemainingTimeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="60dp"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textIsSelectable="false"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Alarm in X hours Y minutes" />

    <TextView
        android:id="@+id/nextAlarmDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/teal_700"
        android:textIsSelectable="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/nextAlarmRemainingTimeText"
        app:layout_constraintStart_toStartOf="@+id/nextAlarmRemainingTimeText"
        app:layout_constraintTop_toBottomOf="@+id/nextAlarmRemainingTimeText"
        tools:text="Sat, Jan 28, 7:00 AM" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/testButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:importantForAccessibility="no"
        android:src="@android:drawable/ic_dialog_info"
        android:visibility="gone"
        app:backgroundTint="@color/teal_700"
        app:fabCustomSize="50dp"
        app:layout_constraintEnd_toStartOf="@+id/addAlarmButton"
        app:layout_constraintTop_toBottomOf="@+id/nextAlarmDateText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addAlarmButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/add_alarm_description"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/teal_700"
        app:fabCustomSize="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextAlarmDateText" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/alarm_list_description"
        app:layout_constraintBottom_toTopOf="@+id/setupGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addAlarmButton">

        <LinearLayout
            android:id="@+id/alarmParent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/empty_wide_divider"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="125dp"
                android:visibility="gone"
                app:cardBackgroundColor="@color/teal_200"
                app:cardCornerRadius="20dp"
                app:contentPadding="20dp"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Alarm Name" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="40sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:text="8:00 AM" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:minWidth="48dp"
                        android:minHeight="48dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/setupGameButton"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/play_text"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
